--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,7 +10,7 @@
             <h3>quick links</h3>
             <a class="link" href="/user"> <i class="fas fa-angle-right"></i> Home</a>
             <a class="link" href="/site/aboutUs"> <i class="fas fa-angle-right"></i> About</a>
-            <a class="link" href="/course"> <i class="fas fa-angle-right"></i>Tutor</a>
+            <a class="link" href="/courses"> <i class="fas fa-angle-right"></i>Tutor</a>
         </div>
 
         <div class="box">
