--- a/views/user/courses.hbs
+++ b/views/user/courses.hbs
@@ -34,7 +34,7 @@
                                         <li class="dotgrid row">
                                             <div class="grouping wrapper col-9">
                                                 <div class="variants">
-                                                    <h4 class="dot-title"><a href="">{{this.courseId.name}}</a></h4>
+                                                    <h4 class="dot-title"><a href="/user/courses/{{this.courseId._id}}">{{this.courseId.name}}</a></h4>
                                                     <div class="price grey-color">
                                                         <span>Price: {{this.courseId.price}} VNĐ</span>
                                                     </div>
