--- a/views/admin/detailTutor.hbs
+++ b/views/admin/detailTutor.hbs
@@ -27,7 +27,7 @@
     <div class="page-view-detail-account">
         <div class="main--content">
             <div class="header--wrapper">
-                <div class="header--title">
+                {{!-- <div class="header--title">
                     <span>Primary</span>
                     <h2>information Form User</h2>
                 </div>
@@ -36,9 +36,7 @@
                         <i class="fa-solid fa-search"></i>
                         <input type="text" placeholder="Search detail account">
                     </div>
-
-
-                </div>
+                </div> --}}
 
 
 
