--- a/views/admin/waitingTutor.hbs
+++ b/views/admin/waitingTutor.hbs
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="list-account-container">
-                <h3 class="main--title">List Account</h3>
+                <h3 class="main--title">List Waiting</h3>
 
 
                 <div class="table-container">
