--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -146,13 +146,13 @@
                                                 </div>
                                                 <div class="price-range grey-color">
                                                     <span>0 VNĐ</span>
-                                                    <span id="value-limit">1000000 VNĐ</span>
+                                                    <span id="value-limit">2000000 VNĐ</span>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="button-container">
-                                            <div class="button"><a class="primary-btn" onclick="clearForm()">Clear
-                                                    all</a></div>
+                                            <div class="button"><a class="primary-btn" onclick="clearForm()">Clear</a>
+                                            </div>
                                             <div class="button"><a class="primary-btn" id="primary-btn">Submit</a></div>
                                         </div>
                                     </form>
